--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
-  margin: 0 auto;
   line-height: 34px;
   color: #777777;
   background: url("../images/redb.jpg");
@@ -11,52 +10,36 @@ body {
 * {
   box-sizing: border-box; }
 
-html {
-  scroll-behavior: smooth; }
-
 /* general */
 .container {
   width: 100%;
-  margin-top: 22em;
-  clear: both; }
-
-h1,
-h2,
-h3,
-p {
-  margin-bottom: 20px; }
+  clear: both;
+  margin-top: -29em;
+  margin-bottom: 14em; }
 
 p:last-child {
   margin-bottom: 0;
   margin-top: 0; }
-
-h1,
-h2,
-h3 {
-  font-weight: 700; }
 
 h1 {
   padding-bottom: 20px;
   font-size: 30px;
   line-height: 49px; }
 
-h2,
-h3 {
-  font-size: 22px; }
-
 #masthead {
   z-index: 99;
   width: 100%;
+  height: 10.5em;
+  margin: 0 auto;
   color: #ffffff; }
 
 #logo {
   float: left;
-  margin-left: 2em;
-  margin-top: 15px;
   width: 7em;
   height: 7em;
+  padding: 18px;
   border-radius: 6em;
-  font-size: 26px;
+  font-size: 27px;
   color: #ffffff; }
 
 nav {
@@ -75,7 +58,58 @@ nav a {
 nav a:first-child {
   border-left: 0 none; }
 
-/* contact page */
+.main-section img {
+  width: 23em;
+  position: relative;
+  top: 12em;
+  z-index: -1; }
+
+.work p {
+  font-size: 4em;
+  color: brown;
+  padding-left: 1em;
+  padding-top: 1em;
+  font-family: 'Inconsolata', monospace; }
+
+img.second {
+  width: 23em;
+  position: relative;
+  top: 11em;
+  left: 37em; }
+
+.first:hover {
+  opacity: 0.5; }
+
+.second:hover {
+  opacity: 0.5; }
+
+p.second-text {
+  font-size: 4em;
+  color: lightslategray;
+  padding-left: 7em;
+  padding-top: 1em;
+  font-family: 'Inconsolata', monospace; }
+
+.contact h1 {
+  padding-bottom: 23px;
+  font-size: 50px;
+  float: inherit; }
+
+.contact {
+  top: 33em;
+  left: 10em;
+  margin-right: 171px;
+  position: relative;
+  color: lightslategrey; }
+
+h2.contact-t {
+  font-size: 2em; }
+
+h1.contact-t {
+  padding-bottom: 23px;
+  font-size: 50px;
+  float: none; }
+
 #contact-form ul {
   margin-bottom: 20px; }
 
@@ -87,163 +121,65 @@ input[type=text],
 input[type=email],
 textarea {
   display: block;
-  width: 100%; }
+  width: 88%; }
 
 input[type=text],
 input[type=email],
 textarea {
-  height: 35px;
+  height: 34px;
   padding: 0 10px;
-  font-size: 14px;
+  font-size: 13px;
   border: 1px solid #dddddd; }
 
 textarea {
-  height: 200px; }
+  height: 135px; }
 
 input[type=submit] {
-  padding: 10px 30px;
+  padding: 12px 30px;
   font-size: 18px;
   color: #ffffff;
+  margin-top: 1em;
   cursor: pointer;
-  background: #4aaaa5;
+  background: brown;
   border: 0 none; }
 
-/* Media Queries for Desktop (908px)*/
-@media only screen and (max-width: 980px) {
-  #masthead {
-    position: static;
-    margin: -8px 1px -55px; }
-  .main-section {
-    margin-bottom: 51%;
-    margin-top: 0;
-    margin-left: 55px;
-    width: 67%;
-    height: 64%; }
-  p {
-    font-size: smaller; }
-  #logo {
-    width: 31%;
-    font-size: 140%;
-    margin-left: 6%; }
-  #portfolio {
-    width: 70%;
-    margin-bottom: 3%; }
-  input[type=submit] {
-    margin: 10px;
-    margin-left: 0; }
-  nav {
-    width: 39%;
-    margin-top: 3%; }
-  img {
-    width: 38%; }
-  footer {
-    width: 100%; } }
+.conclusion-t {
+  margin-left: 1em;
+  top: -13em;
+  width: 3em;
+  height: 0em;
+  font-size: 2em;
+  position: relative; }
 
-/*Media Query for Tablet (768px)*/
-@media only screen and (max-width: 768px) {
-  .main-section {
-    margin-bottom: 51%;
-    width: 93%;
-    margin-left: 3%; }
-  #portfolio {
-    width: 93%; } }
+.conclusion-t h3 {
+  width: 17em;
+  line-height: 158%;
+  font-size: 5vw;
+  margin-top: 14em;
+  margin-left: 42%;
+  font-family: 'Tauri', sans-serif; }
 
-/*Media Query for (640px)*/
-@media only screen and (max-width: 640px) {
-  #masterhead {
-    width: 100%; }
-  #logo {
-    width: 100%;
-    margin: 0; }
-  nav {
-    margin-left: 23%;
-    text-align: center;
-    position: relative;
-    margin-right: 37%;
-    display: flex;
-    padding: 4%; }
-  #about-me {
-    position: absolute;
-    height: 139%; }
-  .main-section p {
-    float: left; }
-  img {
-    margin-left: -2%;
-    width: 104%;
-    height: 53%; }
-  footer {
-    margin-top: 117%;
-    position: sticky; } }
-
-@media only screen and (max-width: 414px) {
-  nav {
-    margin-right: 50%; }
-  img {
-    width: 104%;
-    height: 30%; }
-  #about-me {
-    position: absolute;
-    height: 166%; }
-  footer {
-    margin-top: 252%;
-    position: sticky; } }
-
-@media only screen and (max-width: 411px) {
-  nav {
-    margin-right: 49%; }
-  img {
-    width: 104%;
-    height: 30%; }
-  #about-me {
-    position: absolute;
-    height: 143%; }
-  footer {
-    margin-top: 252%;
-    position: sticky; } }
-
-@media only screen and (max-width: 375px) {
-  nav {
-    margin-right: 50%; }
-  img {
-    width: 104%;
-    height: 30%; }
-  #about-me {
-    position: absolute;
-    height: 166%; }
-  footer {
-    margin-top: 252%;
-    position: sticky; } }
-
-@media only screen and (max-width: 360px) {
-  nav {
-    margin-right: 53%; }
-  img {
-    width: 104%;
-    height: 38%; }
-  #about-me {
-    position: absolute;
-    height: 193%; }
-  footer {
-    margin-top: 252%;
-    position: sticky; } }
+.color-brown {
+  color: brown; }
 
 .font_one {
   padding: 7%;
   float: right;
-  font-size: 7em;
+  margin-top: 0;
+  font-size: 6em;
   line-height: 137px;
   color: brown;
   font-family: 'Tauri', sans-serif; }
 
 .pres {
-  position: relative; }
+  position: relative;
+  height: 9em; }
 
 p.info_about {
-  position: relative;
-  padding: 9em;
-  width: 28em;
-  left: -8%;
-  top: 9em;
+  position: absolute;
+  width: 10em;
+  left: 4em;
+  top: 21em;
   color: lightslategray;
   font-size: 122%;
   transform: rotate(-90deg);
@@ -253,22 +189,17 @@ p.hp:hover {
   text-decoration: line-through; }
 
 footer {
-  padding: 30px 0;
   clear: both;
-  width: 100%;
-  position: fixed;
+  position: relative;
   font-size: 12px;
-  color: #ffffff;
-  color: #cccccc;
+  top: 49em;
   text-align: center;
-  background: #666666;
-  border-top: 8px solid #4aaaa5;
   height: 50px; }
 
-h3, h2 {
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  line-height: 22px; }
+.footer-t {
+  font-size: 151%;
+  padding: 1em;
+  color: lightslategray; }
 
 ul {
   list-style-type: none; }
@@ -279,9 +210,8 @@ ul {
 
 .socialmedia {
   position: fixed;
-  top: 325px;
-  right: -146px;
-  font-size: 21px;
+  top: 250px;
+  right: -120px;
   z-index: 99; }
 
 ul, li {
@@ -302,7 +232,7 @@ ul, li {
 
 .x-one {
   opacity: 0.5;
-  z-index: 0;
+  z-index: -1;
   font-size: 8em;
   top: 84%;
   left: 7em;
@@ -346,7 +276,7 @@ ul, li {
   opacity: 0.5;
   z-index: -1;
   font-size: 8em;
-  top: 193%;
+  top: 186%;
   left: 16%;
   position: absolute;
   font-weight: bolder;
@@ -356,7 +286,7 @@ ul, li {
   opacity: 0.5;
   z-index: -1;
   font-size: 8em;
-  top: 258%;
+  top: 228%;
   left: 76%;
   position: absolute;
   font-weight: bolder;
@@ -371,7 +301,7 @@ ul, li {
   font-family: 'Tauri', sans-serif;
   line-height: 49px; }
 
-.main-section p {
+.about-text {
   float: left;
   width: 24em;
   height: 16em;
@@ -382,11 +312,12 @@ ul, li {
   margin-left: 8em; }
 
 .skill-block {
-  position: relative;
-  top: 185px;
-  width: 22em;
-  height: 16em;
-  right: -1010px;
+  margin-top: 21%;
+  position: absolute;
+  right: 0%;
+  width: 18em;
+  height: 14em;
+  margin-bottom: 81%;
   background-color: #022a3d;
   font-size: 21px;
   z-index: 1;
@@ -398,8 +329,9 @@ ul, li {
   font-size: 40px; }
 
 .skill-list {
-  position: relative;
-  top: -34em;
+  position: sticky;
+  margin-top: 31%;
+  margin-left: 13%;
   line-height: 3em;
   left: 2em;
   font-family: "Inconsolata", monospace; }
@@ -429,8 +361,7 @@ img.loader.img {
   border-radius: 5em;
   margin: 0 auto;
   position: fixed;
-  top: 23em;
-  transform: translateY(-50%); }
+  top: 23em; }
 
 .loader {
   position: fixed;
