--- a/public/scss/property/_about.scss
+++ b/public/scss/property/_about.scss
@@ -8,7 +8,7 @@
     line-height: 49px;
 }
 
-.main-section p{
+.about-text{
     float: left;
     width: 24em;
     height: 16em;
@@ -21,14 +21,15 @@
 }
 
 .skill-block{
-    position: relative;
-    top: 185px;
-    width: 22em;
-    height: 16em;
-    right: -1010px;;
+    margin-top: 21%;
+    position: absolute;
+    right: 0%;
+    width: 18em;
+    height: 14em;
+    margin-bottom: 81%;
     background-color: #022a3d;
     font-size: 21px;
-    z-index: 1;
+    z-index: 1;    
     box-shadow: 0 0 75px rgba(0, 0, 0, 0.3), 0 0 12px rgba(0, 0, 0, 0.22);
 }
 
@@ -39,8 +40,9 @@
 }
 
 .skill-list{
-    position: relative;
-    top: -34em;
+    position: sticky;
+    margin-top: 31%;
+    margin-left: 13%;
     line-height: 3em;
     left: 2em;
     font-family: "Inconsolata", monospace;
