--- a/public/scss/property/_body.scss
+++ b/public/scss/property/_body.scss
@@ -1,7 +1,6 @@
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
-    margin:0 auto;
     line-height: 34px;
     color: #777777;
     background: url("../images/redb.jpg");
@@ -14,34 +13,19 @@ body {
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
 
 /* general */
 
 .container {
     width: 100%;
-    margin-top: 22em;
     clear: both;
-}
-
-h1,
-h2,
-h3,
-p {
-    margin-bottom: 20px;
+    margin-top: -29em;
+    margin-bottom: 14em;
 }
 
 p:last-child {
     margin-bottom: 0;
     margin-top:0;
-}
-
-h1,
-h2,
-h3 {
-    font-weight: 700;
 }
 
 h1 {
@@ -50,7 +34,3 @@ h1 {
     line-height: 49px;
 }
 
-h2,
-h3 {
-    font-size: 22px;
-}
