--- a/public/scss/property/_footer.scss
+++ b/public/scss/property/_footer.scss
@@ -1,20 +1,17 @@
 footer {
-    padding: 30px 0;
     clear: both;
-    width:100%;
-    position: fixed;
+    position: relative;
     font-size: 12px;
-    color: #ffffff;
-    color: #cccccc;
+    top: 49em;
     text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
     height: 50px;
 }
-   
-h3, h2 {
-    padding-bottom: 20px;
-    margin-bottom: 15px;
-    line-height: 22px;
+
+  
+.footer-t{
+    font-size: 151%;
+    padding: 1em;
+    color: lightslategray
 }
+
    
