--- a/public/scss/property/_header.scss
+++ b/public/scss/property/_header.scss
@@ -1,17 +1,18 @@
 #masthead {
     z-index: 99;
     width: 100%;
+    height: 10.5em;
+    margin: 0 auto;
     color: #ffffff;
 }
-   
+
 #logo {
-    float: left;
-    margin-left: 2em;
-    margin-top: 15px;
+float: left;
     width: 7em;
     height: 7em;
+    padding: 18px;
     border-radius: 6em;
-    font-size: 26px;
+    font-size: 27px;
     color: #ffffff;
 }
 
